feat: add back @Security annotation for needed methods in all microservices to complete swagger API merge
