# user-service/docs/swagger.json
@@ -51,6 +51,11 @@
         },
         "/me": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns info about the authenticated user",
                 "produces": [
                     "application/json"
